syntax = "proto3";

package product.v1;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";

service ProductService {
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
}

message GetProductRequest {
  string id = 1 [(buf.validate.field).string = {
    min_len: 2
    max_len: 50
  }];
}

message GetProductResponse {
  string id = 1;
  string name = 2;
}
